# finchvox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Procfile  README.md  pyproject.toml  requirements.txt  test_send_spans.py
.claude/: settings.local.json
docs/: DEVELOPMENT.md  RELEASE.md
examples/livekit/: Dockerfile  README.md  agent.py  livekit.toml  pyproject.toml
examples/pipecat/chaos/: bot.py
examples/pipecat/webrtc/: pyproject.toml
examples/webrtc/: README.md  bot.py
scripts/: fix-ruff.sh
src/finchvox/: __init__.py  __main__.py  audio_compressor.py  audio_finalizer.py  audio_utils.py  cli.py  conversation.py  environment.py  metrics.py  processor.py  scheduler.py  server.py  session.py  session_finalizer.py  telemetry.py  trace.py  ui_routes.py
src/finchvox/adapters/: __init__.py  base.py  livekit.py  pipecat.py
src/finchvox/collector/: __main__.py  audio_handler.py  collector_routes.py  log_service.py  log_writer.py  server.py  service.py  writer.py
tests/: conftest.py  test_adapters.py  test_audio_compressor.py  test_audio_finalizer.py  test_metrics.py  test_processor.py  test_scheduler.py  test_service.py  test_session.py  test_session_finalizer.py  test_session_upload.py  test_storage_local.py  test_storage_s3.py  test_ui_routes.py  test_writer.py
ui/: session_detail.html  sessions_list.html  trace_detail.html  traces_list.html
ui/css/: app.css
ui/js/: environment_view.js  logs_view.js  metrics_view.js  session_detail.js  sessions_list.js  trace_detail.js  traces_list.js
worker/: README.md
worker/src/: index.js
(+4 files in other folders)
